--- a/CourseService/src/main/resources/application.properties
+++ b/CourseService/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=CourseService
 server.port=8001
 
 #datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/rjay?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=true
+spring.datasource.url=jdbc:mysql://bhargav.chu4quqcaysc.ap-south-1.rds.amazonaws.com:3306/rjay?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=true
 #you should change them according to your credentials.
-spring.datasource.username=root
-spring.datasource.password=13me1a0406@A
+spring.datasource.username=bhargav
+spring.datasource.password=bhargav123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #disable hibernate auto ddl changes
